--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: "Data Science: Making It Simple, Yet Significant"
+title: "Artin Sinani"
 
 # Short description of your site
 description: A virtual proof that name is awesome!
