--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: "Artin Sinani"
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: "Data Science: Making It Simple, Yet Significant"
 
 # --- Navigation bar options --- #
 
