--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ avatar: "/img/jedi.png"
 navbar-col: "#F5F5F5"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
-page-col: "#FFFFFF"
+page-col: "#42a7f4"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
