--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ avatar: "/img/jedi.png"
 navbar-col: "#F5F5F5"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
-page-col: "#bff5ff"
+page-col: "#ddf9ff"
 link-col: "#008AFF"
 hover-col: "#f4b841"
 footer-col: "#F5F5F5"
